--- a/lib/templates/admin/userlog-audit-detailed.html
+++ b/lib/templates/admin/userlog-audit-detailed.html
@@ -51,7 +51,7 @@
 	    </tbody>
     </table>
 
-    {if count($aAuditDetail.children) > 0}
+    {if $aAuditDetail.children}
     <p class="tableTitle">Children History</p>
     <table class="data-grid table">
         <tbody>
@@ -83,7 +83,7 @@
                 </td>
                 <td><img src="{$assetPath|escape}/images/icon-zoom.gif" />&nbsp;<a href="userlog-audit-detailed.php?auditId={$aValue.auditid}">View</a></td>
             </tr>
-            {if count($aValue.children) > 0}
+            {if $aValue.children}
                 {foreach from=$aValue.children key=k item=val}
 		            <tr class="{$rowClass}">
 		                <td>{$val.updated}</td>
